--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,21 +32,24 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
               <h1>
-                Leonid Keselman
+                Pamely J. C. Zantou
               </h1>
-              <p>I am a PhD student at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, part of the <a href="https://www.scs.cmu.edu/">School of Computer Science</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I work on 3D computer vision. My PhD advisor is <a href="http://www.cs.cmu.edu/~hebert/">Martial Hebert</a>.
+              <p>
+                Hello World ✋️ I love robots and I envision a world where they understand humans interactions and collaborate effectively across diverse domains, from hospitals to factories. 
+                I am equally enthusiastic about developing intelligent solutions that have the potential to save lives, particularly in the healthcare sector. <br> 
+                My intesrests = Social * (Robotics + AI) 
               </p>
               <p>
-                From 2011 to 2017, I worked at <a href="https://www.intel.com">Intel</a>, as part of <a href="https://www.intelrealsense.com/">Intel RealSense</a>. I primarily designed computer vision algorithms for efficient hardware ASICs, including the Intel RealSense <a href="https://software.intel.com/en-us/articles/realsense-r200-camera">R200</a> and <a href="https://software.intel.com/en-us/realsense/d400">D400</a> RGB-D sensors. Additionally, I worked on <a href="https://github.com/IntelRealSense/librealsense">software APIs</a>, <a href="https://patents.google.com/patent/US9992474B2">active illumination systems</a>, <a href="https://patents.google.com/patent/US9304597">human-computer interaction devices</a>, and helped develop demos for trade shows, including CES 2012-2016.
+                I am a Research Assistant under the guidance of <a href="https://www.andrew.cmu.edu/user/cjoewong/"> Prof Carlee Joe-Wong </a> in the Learning, Incentives, and Optimization for Networked Systems (<a href="https://research.ece.cmu.edu/lions/index.html">LIONS</a>) Lab at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. We are exploring efficients methods for diagnosing Birth Asphyxia using babies cries and Federated Learning.
               </p>
               <p>
-                I have an MS in Computer Science (AI focus) from <a href="http://cs.stanford.edu">Stanford University</a>, where I was a research assistant for <a href="http://svl.stanford.edu/">Silvio Savarese</a> and a teaching assistant for <a href="http://svl.stanford.edu/">Fei-Fei Li</a> (<a href="http://vision.stanford.edu/teaching/cs131_fall1617/">CS131</a> & <a href="http://cs231n.stanford.edu/2017/">CS231N</a>). I have a BS in EECS from <a href="http://www.eecs.berkeley.edu/">UC Berkeley</a>, where I worked in <a href="https://people.eecs.berkeley.edu/~pister/">Kris Pister's</a> lab.
+                I received my Master's degree in Advanced Electrical and Computer Engineering from Carnegie Mellon University. I was fortunate to be guided by Professor <a href="http://www.vernon.eu/"> David Vernon </a> for my Msc graduate project but also as his research assistant for the <a href="https://cssr4africa.github.io/"> CSSR4Africa </a> research project and his teaching assistant for his courses <a href="https://www.africa.engineering.cmu.edu/academics/courses/18-799-L.html"> 18-799-L</a> Robotics: Principles and Practice and <a href="https://www.africa.engineering.cmu.edu/academics/courses/18-799-R.html"> 18-799-R</a> Cognitive Robotics. I completed my Bachelor degree in Software Engineering at the University of Abomey-Calavi (<a href="https://uac.bj/"> UAC</a>) in 2019. 
               </p>
               <p style="text-align:center">
                 <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/leonidk">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/lkeselman"> LinkedIn </a>
+                <a href="https://github.com/pamely">GitHub</a> &nbsp;/&nbsp;
+                <a href="https://shorturl.at/frAQU">Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/pamely-zantou/"> LinkedIn </a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
