--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,7 @@
               </h1>
               <p>
                 Hello World ✋️ I love robots and I envision a world where they understand humans interactions and collaborate effectively across diverse domains, from hospitals to factories. 
-                I am equally enthusiastic about developing intelligent solutions that have the potential to save lives, particularly in the healthcare sector. <br> 
-                My intesrests = Social * (Robotics + AI) 
+                I am equally enthusiastic about developing intelligent solutions that have the potential to save lives, particularly in the healthcare sector.
               </p>
               <p>
                 I am a Research Assistant under the guidance of <a href="https://www.andrew.cmu.edu/user/cjoewong/"> Prof Carlee Joe-Wong </a> in the Learning, Incentives, and Optimization for Networked Systems (<a href="https://research.ece.cmu.edu/lions/index.html">LIONS</a>) Lab at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. We are exploring efficients methods for diagnosing Birth Asphyxia using babies cries and Federated Learning.
