--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
               <h1>
                 Pamely J. C. Zantou
               </h1>
+              <hr>
               <p>
                 Hello World ✋️ I love robots and I envision a world where they understand humans interactions and collaborate effectively across diverse domains, from hospitals to factories. 
                 I am equally enthusiastic about developing intelligent solutions that have the potential to save lives, particularly in the healthcare sector.
@@ -45,7 +46,7 @@
                 I received my Master's degree in Advanced Electrical and Computer Engineering from Carnegie Mellon University. I was fortunate to be guided by Professor <a href="http://www.vernon.eu/"> David Vernon </a> for my Msc graduate project but also as his research assistant for the <a href="https://cssr4africa.github.io/"> CSSR4Africa </a> research project and his teaching assistant for his courses <a href="https://www.africa.engineering.cmu.edu/academics/courses/18-799-L.html"> 18-799-L</a> Robotics: Principles and Practice and <a href="https://www.africa.engineering.cmu.edu/academics/courses/18-799-R.html"> 18-799-R</a> Cognitive Robotics. I completed my Bachelor degree in Software Engineering at the University of Abomey-Calavi (<a href="https://uac.bj/"> UAC</a>) in 2019. 
               </p>
               <p style="text-align:center">
-                <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
+                <a target="_blank" href="mailto:pzantou@andrew.cmu.edu"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/pamely">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://shorturl.at/frAQU">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/pamely-zantou/"> LinkedIn </a>
