--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                My interests lie at the intersection of human-robot interaction, robot navigation and lomotion, deep Learning, computer vision, reinforcement Learning, edge Computing, distributed machine learning.
+                I am interested in human-robot interaction, robot navigation and lomotion, deep learning, computer vision, reinforcement learning, edge computing, distributed machine learning and privacy preserving AI.
               </p>
             </td>
           </tr>
