--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research Interests</h2>
               <p>
-                My goal is to design human-centered AI systems that can interact effectively with humans and collaborate with them. At the core of my research interests lies society. This entails not only fostering respect for every individual but also implementing systems that ensure and safeguard individual security. I am interested in social robotics, optimization, edge computing, computer vision and privacy preserving machine learning/AI. 
+                My goal is to design human-centered AI systems that can interact effectively with humans and collaborate with them. At the core of my research interests lies society. This entails not only fostering respect for every individual but also implementing systems that ensure and safeguard individual security. I am interested in social robotics, optimization, edge computing, deep reinforcement learning, computer vision and privacy preserving machine learning/AI. 
 
               </p>
             </td>
