--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Awards</h2>
+              <h2>Publications</h2>
               <p>  A heartfelt thank you to all the individuals who contributed to these publications! 
             </td>
           </tr>
