--- a/style.scss
+++ b/style.scss
@@ -29,8 +29,8 @@ th,
 tr,
 p,
 a {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
+  font-size: 15px;
   font-display: auto;
 }
 
