--- a/style.scss
+++ b/style.scss
@@ -30,21 +30,23 @@ tr,
 p,
 a {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-display: auto;
+  font-weight: 400;
 }
 
 strong {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-display: auto;
+  font-weight: 400;
 }
 
 h2 {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 24px;
   font-display: auto;
-  font-weight: normal;
+  font-weight: 600;
   padding: 0px;
   margin: 0px;
   display:inline; 
@@ -52,7 +54,7 @@ h2 {
 
 h3 {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   font-display: auto;
   padding: 0px;
@@ -62,8 +64,8 @@ h3 {
 
 h1 {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-  font-size: 32px;
-  font-weight: normal;
+  font-size: 38px;
+  font-weight: 700;
   font-display: auto;
   text-align: center;
   padding: 0px;
