--- a/style.scss
+++ b/style.scss
@@ -30,9 +30,10 @@ tr,
 p,
 a {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-display: auto;
   font-weight: 400;
+  text-align: justify;
 }
 
 strong {
