--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,10 @@ span.highlight {
   background-color: #ffffd0;
 }
 
+.zoom-image:hover {
+  transform: scale(1.8);
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 //@import "highlights";
