--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
         </table>             
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle">
+            <td style="padding:2.5%;width:100%;vertical-align:middle" class="zoom-container">
               <h2>Publications</h2>
               <p>  A heartfelt thank you to all the individuals who contributed to these publications! 
             </td>
