--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
         </table>             
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle" class="zoom-container">
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Publications</h2>
               <p>  A heartfelt thank you to all the individuals who contributed to these publications! 
             </td>
@@ -137,7 +137,7 @@
           {% for cat in post.categories %}
           {% if cat != 'publications' %}
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px" class="zoom-container">
               <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
