--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Research Interests</h2>
+              <h2>Research Interests</h2><hr>
               <p>
                 My goal is to design human-centered AI systems that can interact effectively with humans and collaborate with them. At the core of my research interests lies society. This entails not only fostering respect for every individual but also implementing systems that ensure and safeguard individual security. I am interested in social robotics, optimization, edge computing, deep reinforcement learning, computer vision and privacy preserving machine learning/AI. 
 
@@ -126,7 +126,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Publications</h2>
+              <h2>Publications</h2><hr>
               <p>  A heartfelt thank you to all the individuals who contributed to these publications! 
             </td>
           </tr>
@@ -192,7 +192,7 @@
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Projects</h2>
+              <h2>Projects</h2><hr>
               <p>These include coursework, side projects and unpublished research work. 
               </p></p>
             </td>
@@ -251,7 +251,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>🏆 Awards 🏆</h2> 
+              <h2>🏆 Awards 🏆</h2><hr> 
               </p><a href="https://www.africa.engineering.cmu.edu/students/fellowships-awards.html">Jeremiah N. Mpagazehe Rising Researcher Award for the class of 2023 at CMU-Africa</a></p>
               </p><a href="https://www.ieee-ras.org/women-in-engineering/idea-winners">IEEE-RAS WiE IDEA Award</a></p>
             </td>
