--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -192,12 +192,13 @@
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Projects</h2><hr>
+              <h2>Projects</h2>
               <p>These include coursework, side projects and unpublished research work. 
               </p></p>
             </td>
           </tr>
         </table>
+        <hr>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
           {% for post in site.posts %}
