--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Publications</h2><hr>
+              <h2>Publications</h2>
               <p>  A heartfelt thank you to all the individuals who contributed to these publications! 
             </td>
           </tr>
@@ -186,6 +186,7 @@
           {% endfor %}
           {% endfor %}
         </table>
+        <hr>
         <br>
         <br>
         <br>
@@ -198,7 +199,6 @@
             </td>
           </tr>
         </table>
-        <hr>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
           {% for post in site.posts %}
@@ -245,14 +245,14 @@
           {% endfor %}
           {% endfor %}
         </table>
+        <hr>
         <br>
         <br>
         <br>
-
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>🏆 Awards 🏆</h2><hr> 
+              <h2>🏆 Awards 🏆</h2>
               </p><a href="https://www.africa.engineering.cmu.edu/students/fellowships-awards.html">Jeremiah N. Mpagazehe Rising Researcher Award for the class of 2023 at CMU-Africa</a></p>
               </p><a href="https://www.ieee-ras.org/women-in-engineering/idea-winners">IEEE-RAS WiE IDEA Award</a></p>
             </td>
@@ -304,6 +304,7 @@
           {% endfor %}
           {% endfor %}
         </table>
+        <hr>
         <br>
         <br>
         <br>
