--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -207,7 +207,7 @@
 
           {% for post in site.posts %}
           {% for cat in post.categories %}
-          {% if cat == 'project' or cat == 'report' %}
+          {% if cat == 'Project' or cat == 'Report' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
               <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
