--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Publications</h2>
-              <p>  A heartfelt thank you to all the individuals who contributed to these publications! 
+              <p>  A heartfelt thank you to all the individuals who contributed to these publications! </p>
             </td>
           </tr>
         </table>
