--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,9 +96,9 @@
               {{post.paper}} 
               <br>
               {% if post.pdf %}
-              <a href="{{post.pdf}}">patent</a>
+              <a href="{{post.pdf}}">pdf</a>
               {% endif %}
-              <p></p>p
+              <p></p>
               {{ post.excerpt }}
             </td>
           </tr>
