--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
               <br>
               <em>{{post.categories}} {{post.course}}</em>
               <br>
-              {{post.venue}}, {{ post.date | date: "%Y-%m-%d" }}
+              <em style="font-size: 12px; color: #737373"> {{post.venue}}, {{ post.date | date: "%Y-%m-%d" }}</em>
               <br>
               {% if post.pdf %}
               <a href="{{post.pdf}}">pdf</a>
