--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,12 +92,12 @@
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
               <br>
-              <em>{{post.categories}} {{post.course}}</em>
+              <em style="font-size: 13px; color: #737373">{{post.categories}}</em>
               <br>
-              <em style="font-size: 12px; color: #737373"> {{post.venue}}, {{ post.date | date: "%Y-%m-%d" }}</em>
+              <em style="font-size: 13px; color: #737373"> {{post.venue}}, {{ post.date | date: "%Y-%m-%d" }}</em>
               <br>
               {% if post.pdf %}
-              <a href="{{post.pdf}}">pdf</a>
+              <a href="{{post.pdf}}" style="font-size: 13px;">pdf</a>
               {% endif %}
               <p></p>
               {{ post.excerpt }}
