--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,6 +94,8 @@
               <br>
               <em style="font-size: 13px; color: #737373">{{post.categories}}</em>
               <br>
+              <em style="font-size: 13px; color: #737373">{{post.authors}}</em>
+              <br>
               <em style="font-size: 13px; color: #737373"> {{post.venue}}, {{ post.date | date: "%Y-%m-%d" }}</em>
               <br>
               {% if post.pdf %}
