--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,7 +141,7 @@
               <br>
               <em style="font-size: 13px; color: #737373">{{post.authors}}</em>
               <br>
-              <em style="font-size: 13px; color: #737373"> {{post.venue}}, {{ post.date | date: "%Y-%m-%d" }}</em>
+              <em style="font-size: 13px; color: #737373">{{ post.date | date: "%Y-%m-%d" }}</em>
               <br>
               {% if post.report %}
               <a href="{{post.report}}" style="font-size: 13px;">report</a> <em style="font-size: 13px; color: #737373"> 
