--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,6 +145,7 @@
               <br>
               {% if post.report %}
               <a href="{{post.report}}" style="font-size: 13px;">report</a> <em style="font-size: 13px; color: #737373"> 
+              {% if endif %}
               <p></p>
               {{ post.excerpt }}
             </td>          
