--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -144,7 +144,7 @@
               <em style="font-size: 13px; color: #737373">{{ post.date | date: "%Y-%m-%d" }}</em>
               <br>
               {% if post.report %}
-              <a href="{{post.report}}" style="font-size: 13px;">report</a> <em style="font-size: 13px; color: #737373"> 
+              <a href="{{post.report}}" style="font-size: 13px;">report</a> 
               {% endif %}
               <p></p>
               {{ post.excerpt }}
