--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
           {% if cat == 'publications' or cat == 'Poster'  or cat == 'Paper' or cat == 'Workshop' %}
           <tr>    
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px" class="zoom-container">
-              <img src="/tn{{post.image}}" alt="publications image" style="width:auto; height:auto; max-width:100%;" />
+              <img src="/tn{{post.image}}" alt="publications image" style="width:auto; height:auto; max-width:100%;"  class="zoom-image"/>
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
