--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
               </p>
               <p style="text-align:center">
                 <a target="_blank" href="mailto:pzantou@andrew.cmu.edu"> Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/pamely">GitHub</a> &nbsp;/&nbsp;
+                <a href="https://drive.google.com/file/d/1qZMhgV7U5ERm_GJhy_rMBMCd089JdsGw/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                 <a href="https://shorturl.at/frAQU">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/pamely-zantou/"> LinkedIn </a>
               </p>
